--- a/app/src/main/res/layout/opoc_filesystem_dialog.xml
+++ b/app/src/main/res/layout/opoc_filesystem_dialog.xml
@@ -9,23 +9,23 @@
  *
 #########################################################*/
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ui__filesystem_dialog__root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="4dp">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/ui__filesystem_dialog__title_bar"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
-        <!-- Title TextView -->
         <TextView
             android:id="@+id/ui__filesystem_dialog__title_text"
             android:layout_width="wrap_content"
@@ -34,34 +34,59 @@
             android:textColor="@android:color/primary_text_dark"
             android:textSize="18sp"
             android:layout_gravity="center_vertical|start" />
+
     </androidx.appcompat.widget.Toolbar>
 
+    <!--
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ui__filesystem_dialog__search_holder"
-        android:layout_below="@id/ui__filesystem_dialog__title_bar"
+        app:layout_constraintTop_toBottomOf="@id/ui__filesystem_dialog__title_bar"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__list"
         android:layout_width="match_parent"
         android:visibility="visible"
         android:layout_marginTop="4dp"
-        app:hintEnabled="false"
+        app:endIconMode="clear_text"
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ui__filesystem_dialog__search_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:endIconMode="clear_text"
             android:inputType="text"
             android:textSize="15sp"
             android:singleLine="true"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+    -->
+
+    <EditText
+        android:id="@+id/ui__filesystem_dialog__search_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ui__filesystem_dialog__title_bar"
+        android:visibility="gone"
+        android:inputType="text"
+        android:textSize="15sp"
+        android:singleLine="true"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ui__filesystem_dialog__list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:minHeight="100dp"
+        app:layout_constraintTop_toBottomOf="@id/ui__filesystem_dialog__search_edit"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__buttons"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/ui__filesystem_dialog__search_button"
         android:src="@android:drawable/ic_menu_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@id/ui__filesystem_dialog__new_dir"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__new_dir"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         tools:ignore="ContentDescription"
@@ -72,8 +97,8 @@
         android:src="@android:drawable/ic_input_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@id/ui__filesystem_dialog__home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__home"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         tools:ignore="ContentDescription"
@@ -84,27 +109,17 @@
         android:src="@android:drawable/btn_star"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@id/ui__filesystem_dialog__buttons"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__buttons"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ui__filesystem_dialog__list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="4dp"
-        android:layout_below="@+id/ui__filesystem_dialog__search_holder"
-        android:layout_above="@+id/ui__filesystem_dialog__buttons"
-        android:minHeight="100dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <LinearLayout
         android:id="@+id/ui__filesystem_dialog__buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="end"
         android:orientation="horizontal"
         android:padding="4dp">
@@ -132,4 +147,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
