feat: add org mode SyntaxHighlight simple support

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -104,6 +104,7 @@
         <item translatable="false">@string/wikitext</item>
         <item translatable="false">@string/asciidoc</item>
         <item translatable="false">@string/csv</item>
+        <item translatable="false">@string/orgmode</item>
         <item translatable="false">@string/none</item>
     </string-array>
 
