--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -602,6 +602,32 @@
             </PreferenceCategory>
 
         </PreferenceScreen>
+        <!-- Plaintext Screen -->
+        <PreferenceScreen
+            android:icon="@drawable/fountain_pen"
+            android:title="@string/orgmode">
+
+            <PreferenceCategory android:title="@string/syntax_highlighting">
+                <androidx.preference.SeekBarPreference
+                    android:defaultValue="650"
+                    android:icon="@drawable/ic_highlight_black_24dp"
+                    android:key="@string/pref_key__orgmode__hl_delay"
+                    android:max="3000"
+                    android:summary="@string/highlighting_delay_lower_value_more_battery_drain_description__appspecific"
+                    android:title="@string/highlighting_delay"
+                    app:min="50"
+                    app:showSeekBarValue="true" />
+
+            </PreferenceCategory>
+
+            <PreferenceCategory android:title="@string/actionbutton">
+                <Preference
+                    android:icon="@drawable/ic_reorder_black_24dp"
+                    android:key="@string/pref_key__orgmode__reorder_actions"
+                    android:title="@string/action_order" />
+            </PreferenceCategory>
+
+        </PreferenceScreen>
     </PreferenceCategory>
 
     <!-- Most important settings -->
