--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -174,6 +174,10 @@
                             android:id="@string/action_format_embedbinary"
                             android:icon="@drawable/ic_image_black_24dp"
                             android:title="@string/embed_binary" />
+                        <item
+                            android:id="@string/action_format_orgmode"
+                            android:icon="@drawable/fountain_pen"
+                            android:title="@string/orgmode" />
                     </group>
                 </menu>
             </item>
