--- a/app/src/main/res/layout/opoc_filesystem_dialog.xml
+++ b/app/src/main/res/layout/opoc_filesystem_dialog.xml
@@ -9,97 +9,101 @@
  *
 #########################################################*/
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ui__filesystem_dialog__root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="4dp">
+    android:layout_marginTop="4dp"
+    android:animateLayoutChanges="true">
 
-    <TextView
-        android:id="@+id/ui__filesystem_dialog__title"
-        style="@style/TextAppearance.AppCompat.Title"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/ui__filesystem_dialog__title_bar"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="@color/primary"
-        android:gravity="center_vertical|start"
-        android:minHeight="48dp"
-        android:padding="16dp"
-        tools:text="Select file" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
-    <LinearLayout
-        android:id="@+id/ui__filesystem_dialog__utilbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ui__filesystem_dialog__title"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/ui__filesystem_dialog__home"
-            android:layout_width="32dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:src="@android:drawable/star_big_on"
-            tools:ignore="ContentDescription" />
-
-        <ImageView
-            android:id="@+id/ui__filesystem_dialog__search_button"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:scaleType="fitEnd"
-            android:src="@android:drawable/ic_menu_search"
-            tools:ignore="ContentDescription" />
-
-        <EditText
-            android:id="@+id/ui__filesystem_dialog__search_edit"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/ui__filesystem_dialog__title_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:hint="Search...."
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textSize="14sp"
-            android:visibility="gone"
-            tools:ignore="HardcodedText" />
+            android:text=""
+            android:textColor="@android:color/primary_text_dark"
+            android:textSize="18sp"
+            android:layout_gravity="center_vertical|start" />
 
-    </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/ui__filesystem_dialog__search_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ui__filesystem_dialog__title_bar"
+        android:visibility="gone"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:inputType="text"
+        android:textSize="15sp"
+        android:maxLines="1"
+        android:importantForAutofill="no" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ui__filesystem_dialog__list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/ui__filesystem_dialog__buttons"
-        android:layout_below="@+id/ui__filesystem_dialog__utilbar"
+        android:layout_marginTop="4dp"
         android:minHeight="100dp"
+        app:layout_constraintTop_toBottomOf="@id/ui__filesystem_dialog__search_edit"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__buttons"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ui__filesystem_dialog__search_button"
+        android:src="@android:drawable/ic_menu_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__new_dir"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        tools:ignore="ContentDescription"
+        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ui__filesystem_dialog__new_dir"
+        android:src="@android:drawable/ic_input_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__home"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        tools:ignore="ContentDescription"
+        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ui__filesystem_dialog__home"
+        android:src="@android:drawable/btn_star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ui__filesystem_dialog__buttons"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        tools:ignore="ContentDescription"
+        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"/>
 
     <LinearLayout
         android:id="@+id/ui__filesystem_dialog__buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="end"
         android:orientation="horizontal"
-        android:padding="16dp">
-
+        android:padding="4dp">
 
         <TextView
             android:id="@+id/ui__filesystem_dialog__button_cancel"
@@ -119,9 +123,9 @@
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@color/primary"
-            tools:text="Select folder" />
+            tools:text="Select" />
 
     </LinearLayout>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
