--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -219,7 +219,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="abid_common_open_link_browser" translatable="false">abid_common_open_link_browser</string>
     <string name="abid_common_color_picker" translatable="false">abid_common_color_picker</string>
     <string name="abid_common_time" translatable="false">abid_common_time</string>
-    <string name="abid_common_time_insert_timestamp" translatable="false">abid_common_time_insert_timestamp</string>
     <string name="abid_common_web_jump_to_very_top_or_bottom" translatable="false">abid_common_web_jump_to_very_top_or_bottom</string>
     <string name="abid_common_web_jump_to_table_of_contents" translatable="false">abid_common_web_jump_to_table_of_contents</string>
     <string name="abid_common_view_file_in_other_app" translatable="false">abid_common_view_file_in_other_app</string>
@@ -231,6 +230,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="abid_common_move_text_one_line_up" translatable="false">abid_common_move_text_one_line_up</string>
     <string name="abid_common_move_text_one_line_down" translatable="false">abid_common_move_text_one_line_down</string>
     <string name="abid_common_insert_snippet" translatable="false">abid_common_insert_snippet</string>
+    <string name="abid_common_insert_image" translatable="false">abid_common_insert_image</string>
+    <string name="abid_common_insert_audio" translatable="false">abid_common_insert_audio</string>
+    <string name="abid_common_insert_link" translatable="false">abid_common_insert_link</string>
 
     <string name="abid_markdown_quote" translatable="false">abid_markdown_quote</string>
     <string name="abid_markdown_h1" translatable="false">abid_markdown_h1</string>
@@ -241,8 +243,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="abid_markdown_strikeout" translatable="false">abid_markdown_strikeout</string>
     <string name="abid_markdown_code_inline" translatable="false">abid_markdown_code_inline</string>
     <string name="abid_markdown_horizontal_line" translatable="false">abid_markdown_horizontal_line</string>
-    <string name="abid_markdown_insert_image" translatable="false">abid_markdown_insert_image</string>
-    <string name="abid_markdown_insert_link" translatable="false">abid_markdown_insert_link</string>
     <string name="abid_markdown_table_insert_columns" translatable="false">abid_markdown_table_insert_columns</string>
 
     <string name="abid_asciidoc_h1" translatable="false">abid_asciidoc_h1</string>
@@ -286,9 +286,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="abid_asciidoc_block_table" translatable="false">abid_asciidoc_block_table</string>
     <string name="abid_asciidoc_block_pass" translatable="false">abid_asciidoc_block_pass</string>
     <string name="abid_asciidoc_block_quote" translatable="false">abid_asciidoc_block_quote</string>
-
-    <string name="abid_asciidoc_insert_image" translatable="false">abid_asciidoc_insert_image</string>
-    <string name="abid_asciidoc_insert_link" translatable="false">abid_asciidoc_insert_link</string>
     <string name="abid_asciidoc_table_insert_columns" translatable="false">abid_asciidoc_table_insert_columns</string>
 
     <string name="abid_asciidoc_special_key" translatable="false">abid_asciidoc_special_key</string>
@@ -340,8 +337,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="abid_wikitext_highlight" translatable="false">abid_wikitext_highlight</string>
     <string name="abid_wikitext_strikeout" translatable="false">abid_wikitext_strikeout</string>
     <string name="abid_wikitext_code_inline" translatable="false">abid_wikitext_code_inline</string>
-    <string name="abid_wikitext_insert_link" translatable="false">abid_wikitext_insert_link</string>
-    <string name="abid_wikitext_insert_image" translatable="false">abid_wikitext_insert_image</string>
 
     <string name="abid_todotxt_toggle_done" translatable="false">abid_todotxt_toggle_done</string>
     <string name="abid_todotxt_add_context" translatable="false">abid_todotxt_add_context</string>
@@ -433,6 +428,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="action_format_wikitext" translatable="false">action_format_wikitext</string>
     <string name="action_format_orgmode" translatable="false">action_format_orgmode</string>
     <string name="pref_key__share_into_format" translatable="false">pref_key__share_into_format</string>
+    <string name="pref_key__attachment_folder_name" translatable="false">pref_key__attachment_directory_name</string>
     <string name="squarebrackets" translatable="false">Square Brackets</string>
     <string name="csv" translatable="false">CSV</string>
     <string name="orgmode" translatable="false">OrgMode</string>
