Add Orgmode Preview and icon

--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -147,7 +147,7 @@
                             android:title="@string/embed_binary" />
                         <item
                             android:id="@string/action_format_orgmode"
-                            android:icon="@drawable/fountain_pen"
+                            android:icon="@drawable/ic_org_mode_file"
                             android:title="@string/orgmode" />
                     </group>
                 </menu>
