--- a/app/src/main/res/menu/filesystem__menu.xml
+++ b/app/src/main/res/menu/filesystem__menu.xml
@@ -12,13 +12,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="AlwaysShowAction">
 
-
-    <item
-        android:id="@+id/action_clear_selection"
-        android:icon="@drawable/ic_baseline_clear_24"
-        android:title="@string/clear_selection"
-        android:visible="false"
-        app:showAsAction="always" />
     <item
         android:id="@+id/action_favourite"
         android:icon="@drawable/ic_star_border_black_24dp"
@@ -63,14 +56,14 @@
         android:icon="@drawable/ic_gs_file_move_black_24dp"
         android:title="@string/move"
         android:visible="false"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_copy_selected_items"
         android:icon="@drawable/ic_baseline_file_copy_24"
         android:title="@string/copy"
         android:visible="false"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_create_shortcut"
